<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bt_save"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_phone_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_length"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:helperText="@string/required"
                android:maxLines="1"
                app:prefixTextColor="@color/green"
                app:hintAnimationEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_code"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:helperText="@string/required"
                android:maxLines="1"
                app:prefixTextColor="@color/green"
                app:hintAnimationEnabled="true"
                android:layout_below="@+id/etl_phone_length"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_country_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_text"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:helperText="@string/required"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:errorEnabled="true"
                android:maxLines="1"
                app:prefixTextColor="@color/green"
                app:hintAnimationEnabled="true"
                android:layout_below="@+id/etl_country_code"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_message_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_access_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/access_key"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:helperText="@string/required"
                android:maxLines="1"
                app:prefixTextColor="@color/green"
                app:hintAnimationEnabled="true"
                android:layout_below="@id/etl_message_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_access_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/language"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:helperText="@string/required"
                android:maxLines="1"
                app:prefixTextColor="@color/green"
                app:hintAnimationEnabled="true"
                android:layout_below="@id/etl_access_key"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_voice_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voice_type"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:helperText="@string/required"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true"
                android:maxLines="1"
                app:prefixTextColor="@color/green"
                app:hintAnimationEnabled="true"
                android:layout_below="@id/etl_language"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_voice_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/primary_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jaz"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>